stylesheets/form.css
body {
  background-color:#66ccff;
}

html {
  height: 100%;
}

h1{
font-size: 80px;
  font-weight: 400;
  font-family: "Times New Roman", Times, serif;
  color: white;
}

.mdl-card__title-text{

  font-family: Arial, Helvetica, serif;
  color: #ff99cc ;
}

p {
  color: white;
  font-size: 200%
}

.size{
  font-size: 5px;
}
.choose{
  position:absolute;
  display:flex;
  justify-content:center;
  align-items: center;
  flex-direction: column;
  width:100%;
  height: 100%;
}

button {
  background-color:#ff99cc;
  border-radius: 4px;
  color: white;
  font-size: 16px;
  height: 50px;
  width: 100px;
}

